# AIBUILD_ASSIGNMENT

./: README.md
backend/: Dockerfile  pyproject.toml
backend/app/: db.py  main.py
backend/app/core/: auth.py  config.py  cors.py
backend/app/dependencies/: auth.py  db.py
backend/app/models/: auth.py  upload.py
backend/app/routers/: auth.py  upload.py
frontend/: index.html  package-lock.json  package.json
frontend/public/: sample-data.csv  test_data.xlsx
frontend/src/: App.tsx  index.css
frontend/src/components/: ErrorBoundary.tsx
frontend/src/components/auth/: LoginForm.tsx  RegisterForm.tsx
frontend/src/components/dashboard/: Dashboard.tsx  DataChart.tsx  ProductSelector.tsx
frontend/src/components/layout/: Layout.tsx  Navbar.tsx  ProtectedRoute.tsx  Sidebar.tsx
frontend/src/components/upload/: ExcelUpload.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: DashboardPage.tsx  LoginPage.tsx  RegisterPage.tsx  UploadPage.tsx
frontend/src/store/: auth.ts  products.ts
frontend/src/types/: index.ts
